# daily-quote

./: .gitignore  README.md
src/server/python/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt  test_main.py
src/server/python/daily_quote/: __init__.py  conftest.py  database.py  main.py  quote_model.py
src/server/python/daily_quote/routers/: __init__.py  quotes.py  test_quotes.py
